chore: remove dependencies * surefire junit4 - we are using junit 5 now and it was causing failed tests to be silently ignored * testng - we use junit